hphp/test/zend/good/bug41401.php
<?php
echo 1/-2*5;
echo "\n";
echo 6/+2*-3;