hphp/test/zend/bad/ext/spl/tests/SplFixedArray_count_param_int.php
<?php
$array = new SplFixedArray(5);
echo $array->count(3);
?>